correct the logo font size on mobile view

--- a/styles/responsive.css
+++ b/styles/responsive.css
@@ -120,6 +120,9 @@
         padding: 10px;
         text-align: center;
     }
+    .logo{
+        font-size: 3rem;
+    }
 }
 
 /* Medium Device */
